[package]
name = "eprmutate"
version = "0.1.0"
edition = "2021"
authors = ["Frank Schwidom"]
description = "Permutation Library"
documentation = "https://docs.rs/eprmutate"
license-file = "LICENSE"
homepage = "https://github.com/schwidom/eprmutate"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
